fix(action-menu): allow contents to correctly align

--- a/packages/calcite-components/src/components/action-menu/action-menu.scss
+++ b/packages/calcite-components/src/components/action-menu/action-menu.scss
@@ -40,6 +40,10 @@
   flex-col;
 }
 
+.container {
+  display: contents;
+}
+
 calcite-action {
   --calcite-action-background-color: var(--calcite-action-menu-default-trigger-background-color);
   --calcite-action-text-color: var(--calcite-action-menu-default-trigger-text-color);
